# trendhunter

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
src/trendhunter/: api.py  formatters.py  taxonomies.py  tuples.py  utils.py
tests/: test_api.py  utils.py
tests/data/: A.html  B.html  C.html  D.html
